<resources>
    <string name="app_name">CodePath-wordleClone</string>
    <string name="first_guess">First Guess</string>
    <string name="first_guess_check">First Guess Check</string>
    <string name="second_guess">Second Guess</string>
    <string name="second_guess_check">Second Guess Check</string>
    <string name="third_guess">Third Guess</string>
    <string name="third_guess_check">Third Guess Check</string>
    <string name="word">Word</string>
    <string name="guess">Guess</string>
    <string name="take_a_guess">Take a guess</string>
    <string name="output">Output</string>
    <string name="input">Input</string>
    <string name="reset">Reset</string>
    <string name="enter_a_4_letter_word">Enter a 4 letter word</string>
</resources>